--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ body {
     padding: 10px 20px;
   }
   .menu {
-    overflow-y: scroll;
+    overflow-y: auto;
     justify-content: start;
     flex-direction: column;
     align-items: center;
